# research_agent

./: .flake8  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
.github/workflows/: python-tests.yml
research_agent/: agents.py  app.py  main.py  prompts.py  utils.py  workflow.py
tests/: test_research_workflow.py
